<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gyroscope">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="176dp"
        android:text="@string/gyroscope_data"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gyro_x_tv"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="60dp"
        android:text="@string/x"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/gyro_z_tv"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="75dp"
        android:text="@string/z"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/gyro_y_tv"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="42dp"
        android:text="@string/y"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/gyro_z_tv"
        app:layout_constraintStart_toEndOf="@+id/gyro_x_tv"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>